--- a/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.scss
@@ -72,4 +72,10 @@
       }
     }
   }
+  .evac-list {
+    display: flex;
+    flex-direction: row;
+    color: red;
+    text-decoration: underline;
+  }
 }
