improvement of wfnews-459

--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.scss
@@ -11,6 +11,9 @@ div{
 .table-search-header{
     background-color: white !important;
     border-top: none !important;
+    .label{
+        font-size: 18px;
+    }
 }
 
 .stage-of-control{
