Add next/previous buttons

--- a/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.scss
@@ -3,6 +3,8 @@
   padding: 24px;
   .header {
     text-align: right;
+    display: flex;
+    flex-flow: row-reverse;
     .button {
       cursor: pointer;
     }
