--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -112,8 +112,8 @@
           <panel-local-authority *ngIf="selectedPanel === 'local-authorities' && showAccordion"></panel-local-authority>
       </div>
       <div class="map">
-          <wf-map-container [mapConfig]="mapConfig" (mapInitialized)="initMap($event)"
-              (toggleAccordion)="onToggleAccordion()"></wf-map-container>
+        <div class="identify-panel"></div>
+        <wf-map-container class="map-container" [mapConfig]="mapConfig" (mapInitialized)="initMap($event)" (toggleAccordion)="onToggleAccordion()"></wf-map-container>
       </div>
-</div>
+  </div>
 </div>
