Add timeout bar on hover

--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -72,7 +72,7 @@
         </div>
         <div *ngIf="collectionData">
             <div class = "incident-item" *ngFor="let incident of collectionData" (click)="openPreview(incident)" (mouseenter)="onPanelMouseEnter(incident)" (mouseleave)="onPanelMouseExit(incident)">
-              <mat-progress-bar [id]="incident.incidentName" style="display: none;" mode="determinate" [value]="progressValue"></mat-progress-bar>
+              <mat-progress-bar [id]="incident.incidentName" style="opacity: 0.0;" mode="determinate" [value]="progressValues.get(incident.incidentName)"></mat-progress-bar>
               <div class="item-header" style="color: #1a5a96">{{incident.incidentName}} <mat-icon style="color:#1A5A96; vertical-align: middle;" svgIcon="bookmark"></mat-icon> </div>
                 <div>
                     <span class="item-title">LAST UPDATED: </span>
